# heimdal

include/: config.h.w32
lib/: CMakeLists.txt
lib/base/: db.c
lib/gssapi/ntlm/: acquire_cred.c  external.c  init_sec_context.c
lib/hcrypto/: evp-w32.c  rand-w32.c  rand.c  ui.c
lib/hx509/: name.c  softp11.c
lib/krb5/: addr_families.c  cache.c  constants.c  context.c  expand_path.c  get_default_principal.c  store_stdio.c
lib/roken/: detach.c  dlfcn_w32.c  get_default_username.c  get_window_size.c  getarg.c  mkdir.c  mkstemp.c  parse_units.c  rand.c  secure_getenv.c  setenv.c  simple_exec_w32.c
lib/wind/: stringprep.c
win10/: config.h  uwpapi.cpp  version.h
win10/asn1/: asn1parse.c  asn1parse.h  der-protos.h  lex.c
win10/gssapi/: libgssapi-version.res
win10/gssapi/krb5/: gsskrb5-private.h
win10/gssapi/ntlm/: ntlm-private.h
win10/gssapi/spnego/: spnego-private.h
win10/hdb/: hdb-private.h  hdb-protos.h
win10/hx509/: hx509-private.h  hx509-protos.h  sel-gram.c  sel-gram.h  sel-lex.c
win10/includes/: com_right.h  combining_table.h  config.h  der-private.h  heimntlm-protos.h  krb5-private.h  krb5-types.h  punycode_examples.h  roken.h
win10/kadm5/: kadm5-private.h  kadm5-protos.h
win10/krb5/: krb5-protos.h
win10/wind/: bidi_table.c  bidi_table.h  combining_table.c  errorlist_table.c  errorlist_table.h  map_table.c  map_table.h  normalize_table.c  normalize_table.h  punycode_examples.c
windows/: NTMakefile.w32  Win32.Mak
